# oreilly-bookfinder

./: LICENSE  README.md  pyproject.toml  python_books.csv  recent_data_books.csv
oreilly_bookfinder/: __init__.py  api.py  cli.py
